--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "bluebird": "^3.5.0",
+    "fs": "^0.0.1-security",
     "koa": "^2.3.0",
     "path": "^0.12.7",
     "request": "^2.81.0",
