--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "koa": "^2.3.0",
     "path": "^0.12.7",
     "request": "^2.81.0",
+    "serve-static": "^1.12.3",
     "sha1": "^1.1.1"
   },
   "devDependencies": {},
